--- a/WebContent/views/web/calendario.zul
+++ b/WebContent/views/web/calendario.zul
@@ -107,7 +107,7 @@
 												<n:br></n:br>
 												<image
 													class="img-responsive center-block" width="128px"
-													height="128px" src="${m:getUrlWeb(each.eventoPlan.fkMultimedia.url)}" >
+													height="128px" src="${m:getUrlWeb(vm.eventoPlan.fkMultimedia.url)}" >
 												</image>
 												<n:br></n:br>
 											</div>
