--- a/WebContent/views/desktop/gestion/voluntariado/fortalezas/listaFortalezas.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/fortalezas/listaFortalezas.zul
@@ -12,20 +12,37 @@
 		<div width="100%">
 			<div class="row">
 				<div class="col s12">
+				
+					<div class="input-field col s6">
+						<n:label for="nombre" class="active">Nombre</n:label>
+						<textbox id="nombre" type="text" disabled="true" value="@bind(vm.selectedObject.fkPersona.nombre)"> </textbox>
+					</div>
+				
+					<div class="input-field col s6">
+						<n:label for="apellido" class="active">Apellido</n:label>
+						<textbox id="apellido" type="text" disabled="true" value="@bind(vm.selectedObject.fkPersona.apellido)"> </textbox>
+					</div>
+						
+					<div class="input-field col s6">
+						<n:label for="identificacion" class="active">Cedula</n:label>
+						<textbox id="identificacion" type="text" disabled="true" value="@bind(vm.selectedObject.fkPersona.identificacion)"> </textbox>
+					</div>
+							
+					<div class="input-field col s6">
+						<n:label for="fecha_nacimiento" class="active">Fecha de nacimiento</n:label>
+						<datebox id="db" cols="20" format="dd/MM/yyyy" disabled="true" value="@bind(vm.selectedObject.fkPersona.fechaNacimiento)"/>
+					</div>
 
 					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.fortalezas)"
-							emptyMessage="No hay fortalezas registradas"
-							selectedItems="@bind(vm.fortalezasSeleccionadas)"
-							multiple="true">
+						<listbox model="@load(vm.fortalezas)" emptyMessage="No hay fortalezas registradas" selectedItems="@bind(vm.fortalezasSeleccionadas)" multiple="true" checkmark="true" style="width: 90%; margin-left: 5% ;padding-bottom: 5%;">
 							<listhead sizable="true">
 								<listheader label="Fortalezas" />
 							</listhead>
 							<template name="model">
 								<listitem label="@load(each.nombre)">
 									<zscript>
-	self.setDisabled(vm.disabledFortaleza(each));
-</zscript>
+										self.setDisabled(vm.disabledFortaleza(each));
+									</zscript>
 								</listitem>
 							</template>
 						</listbox>
@@ -45,10 +62,7 @@
 					</div>
 
 					<div sclass="col s5" style="padding:0px">
-						<listbox model="@load(vm.voluntarioFortalezas)"
-							emptyMessage="No hay fortalezas asociadas al voluntario"
-							selectedItems="@bind(vm.voluntarioFortalezasSeleccionadas)"
-							multiple="true">
+						<listbox model="@load(vm.voluntarioFortalezas)" emptyMessage="No hay fortalezas asociadas al voluntario" selectedItems="@bind(vm.voluntarioFortalezasSeleccionadas)" multiple="true" checkmark="true" style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
 							<listhead sizable="true">
 								<listheader
 									label="Fortalezas del voluntario" />
