--- a/WebContent/views/desktop/gestion/voluntariado/postulacion/selectPostulado.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/postulacion/selectPostulado.zul
@@ -12,15 +12,13 @@
 					<div class="col s12">
 						<listbox id="listbox" model="@load(vm.objectsList)" selectedItem="@bind(vm.selectedObject)">
 							<listhead sizable="true">
-								<listheader width="33%" label="Cédula" />
-								<listheader width="33%" label="Nombre" />
-								<listheader width="33%" label="Apellido" />
+								<listheader width="25%" label="Cédula" />
+								<listheader width="75%" label="Voluntario" />
 							</listhead>
 							<template name="model">
 								<listitem>
 									<listcell label="@load(each.fkPersona.identificacion)" />
-									<listcell label="@load(each.fkPersona.nombre)" />
-									<listcell label="@load(each.fkPersona.apellido)" />
+									<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
 								</listitem>
 							</template>
 							<listfoot>
