--- a/WebContent/views/desktop/gestion/voluntariado/registro/datosPersonales.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/registro/datosPersonales.zul
@@ -63,10 +63,10 @@
         					<![CDATA[Por favor, ingrese el número de cédula del voluntario que desea registrar.<br/>]]>
         				</html>
     				</popup>
-							
+					
 					<div class="input-field col s6">
 						<n:label for="fecha_nacimiento" class="active">Fecha de nacimiento</n:label>
-						<datebox id="db" cols="20" format="dd/MM/yyyy" value="@bind(vm.selectedObject.fkPersona.fechaNacimiento)"/>
+						<datebox id="db" cols="20" format="dd/MM/yyyy" value="@bind(vm.fechaNacimiento)"/>
 						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_fechaNacimiento, position=after_end" />
 					</div>
 					
@@ -78,7 +78,7 @@
 					
 					<div class="input-field col s6">
 						<n:label for="sexo" class="active">Sexo</n:label>
-						<combobox id="sexo" readonly="true" model="@bind(vm.sexoEnums)">
+						<combobox id="sexo" readonly="true" model="@bind(vm.sexoEnums)" selectedItem="@bind(vm.sexoEnum)">
 							<template name="model">
 								<comboitem label="@load(each)" />
 							</template>
@@ -110,7 +110,7 @@
 
 					<div class="input-field col s6">
 						<n:label class="active" for="fk_ciudad">Ciudad</n:label>
-						<combobox id="fk_ciudad" readonly="true" placeholder="Seleccione una ciudad" disabled="@load(empty vm.ciudades)" model="@bind(vm.ciudades)" selectedItem="@bind(vm.selectedObject.fkPersona.fkCiudad)">
+						<combobox id="fk_ciudad" readonly="true" placeholder="Seleccione una ciudad" model="@bind(vm.ciudades)" selectedItem="@bind(vm.selectedObject.fkPersona.fkCiudad)">
 							<template name="model">
 								<comboitem label="@load(each.nombre)" />
 							</template>
@@ -123,10 +123,10 @@
         					<![CDATA[Por favor, seleccione la ciudad del país donde reside el voluntario que desea registrar.<br/>]]>
         				</html>
     				</popup>
-							
+					
 					<div class="input-field col s6">
 						<n:label for="fecha_ingreso" class="active" >Fecha de ingreso</n:label>
-						<datebox id="fecha_ingreso" cols="20" format="dd/MM/yyyy" value="@bind(vm.selectedObject.fechaIngreso)" onCreate="self.value = new Date()"/>
+						<datebox id="fecha_ingreso" cols="20" format="dd/MM/yyyy" value="@bind(vm.fechaIngreso)" onCreate="self.value = new Date()"/>
 						<span sclass="fa fa-question-circle fa-lg help-icon-special" tooltip="pop_fechaIngreso, position=after_end" />
 					</div>
 					
