--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/editIndicadoresTrabajoSocialPlanificado.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/indicadores/editIndicadoresTrabajoSocialPlanificado.zul
@@ -146,11 +146,10 @@
 							</listcell>
 
 							<listcell>
-								<intbox
-									style="height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
+								<doublebox format="0.00"
+									style="background: #f2fca5; height: 1em; border: 1px solid #999999; border-radius: 7px; font-size:1.2em;  text-align: center;"
 									value="@bind(each.valorEsperado)">
-								</intbox>
-							</listcell>
+								</doublebox>
 						</listitem>
 					</template>
 				</listbox>
