--- a/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/indicadores/actividadesIndicadores.zul
+++ b/WebContent/views/desktop/gestion/trabajoSocial/planificacion/actividades/indicadores/actividadesIndicadores.zul
@@ -170,10 +170,10 @@
 												value="@bind(each.fkIndicador.fkUnidadMedida.nombre)" />
 										</cell>
 										<cell sclass="vacacion">
-											<intbox
+											<doublebox format="0.00"
 												style="height: 1em; border: 1px solid #999999 !important; border-radius: 7px; font-size: 1.2em; text-align: center;"
 												value="@bind(each.valorEsperado)">
-											</intbox>
+											</doublebox>
 										</cell>
 										<cell sclass="vacacion"
 											style="    border-left: 2px solid #EEEEEE !important;">
