--- a/WebContent/views/desktop/administracion/organizacion/OrganizacionIndex.zul
+++ b/WebContent/views/desktop/administracion/organizacion/OrganizacionIndex.zul
@@ -1,3 +1,5 @@
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
@@ -5,66 +7,73 @@
 		viewModel="@id('vm') @init('ve.smile.administracion.organizacion.viewmodels.VM_OrganizacionIndex')">
 
 		<div class="row">
-		 	<div class="col s12">
-					<div sclass="row">
-						<div class="input-field col s6">
-							<n:label for="rif" class="active">
-								Rif:
-							</n:label>
-							<label style="font-size: 16px;"
-								value="@bind(vm.selectedObject.rif)">
-							</label>
-						</div>
-						
-						<div class="input-field col s6">
-							<n:label for="nombre" class="active">
-								Nombre:
-							</n:label>
-							<label style="font-size: 16px;"
-								value="@bind(vm.selectedObject.nombre)">
-							</label>
-						</div>
+			<div class="col s12">
+				<div sclass="row">
+					<div class="input-field col s6">
+						<n:label for="rif" class="active">Rif:</n:label>
+						<label style="font-size: 16px;"
+							value="@bind(vm.selectedObject.rif)">
+						</label>
 					</div>
-		
-				<div sclass="row">
-						<div class="input-field col s12">
-							<n:label for="direccion" class="active">
-								Dirección:
-							</n:label>
-							<label style="font-size: 16px;"
-								value="@bind(vm.selectedObject.direccion)">
-							</label>
-						</div>			
-				</div>
-				
-				<div sclass="row">
-						<div class="input-field col s6">
-							<n:label for="telefono" class="active">
-								Teléfono:
-							</n:label>
-							<label style="font-size: 16px;"
-								value="@bind(vm.selectedObject.telefono)">
-							</label>
-						</div>
 
-						<div class="input-field col s6">
-							<n:label for="correo" class="active">
-								Correo:
-							</n:label>
-							<label style="font-size: 16px;"
-								value="@bind(vm.selectedObject.correo)">
-							</label>
-						</div>
-				</div>		
-						<div sclass="col s4">
-							<image 
-								class="img-responsive center-block"
-								src="@bind(vm.selectedObject.fkMultimedia.url)"
-								style="width: auto;padding: 0px;margin: 0px;display: inline-block;">
-							</image>
-										
-						</div>	
-			</div>	
+					<div class="input-field col s6">
+						<n:label for="nombre" class="active">
+							Nombre:
+						</n:label>
+						<label style="font-size: 16px;"
+							value="@bind(vm.selectedObject.nombre)">
+						</label>
+					</div>
+				</div>
+				<div sclass="row">
+					<div class="input-field col s12">
+						<n:label for="correo" class="active">
+							Descripción:
+						</n:label>
+						<label style="font-size: 16px;"
+							value="@bind(vm.selectedObject.descripcion)">
+						</label>
+					</div>
+				</div>
+
+				<div sclass="row">
+					<div class="input-field col s12">
+						<n:label for="direccion" class="active">
+							Dirección:
+						</n:label>
+						<label style="font-size: 16px;"
+							value="@bind(vm.selectedObject.direccion)">
+						</label>
+					</div>
+				</div>
+
+				<div sclass="row">
+					<div class="input-field col s6">
+						<n:label for="telefono" class="active">
+							Teléfono:
+						</n:label>
+						<label style="font-size: 16px;"
+							value="@bind(vm.selectedObject.telefono)">
+						</label>
+					</div>
+
+					<div class="input-field col s6">
+						<n:label for="correo" class="active">
+							Correo:
+						</n:label>
+						<label style="font-size: 16px;"
+							value="@bind(vm.selectedObject.correo)">
+						</label>
+					</div>
+				</div>
+				<div sclass="col s4">
+
+					<image class="img-responsive  center-block"
+						src="${m:getUrlWeb(vm.selectedObject.fkMultimedia.url)}"
+						width="150px" height="150px">
+					</image>
+				</div>
+			</div>
 		</div>
 
 		<toolbar id="toolbar" align="center"
