--- a/WebContent/views/desktop/administracion/portalweb/calendario/CalendarioIndex.zul
+++ b/WebContent/views/desktop/administracion/portalweb/calendario/CalendarioIndex.zul
@@ -1,3 +1,6 @@
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div width="100%" class='${arg.animation_}'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
@@ -10,20 +13,22 @@
 					<listbox id="listbox" model="@load(vm.objectsList)"
 						selectedItem="@bind(vm.selectedObject)">
 						<listhead sizable="true">
-				<!--			<listheader width="25%" label="Album" />                     -->
+
 							<listheader width="25%" label="Evento" />
 							<listheader width="25%" label="Lugar" />
-				<!--			<listheader width="25%" label="Motivo" />                    -->
-							<listheader width="25%" label="Responsable" />
-							
+							<listheader width="25%"
+								label="Fecha Planificada" />
+
 						</listhead>
 						<template name="model">
 							<listitem>
-				<!--  				<listcell label="@load(each.fkAlbum.titulo)" />               -->
-								<listcell label="@load(each.fkEvento.nombre)" />
-								<listcell label="@load(each.fkDirectorio.nombre)" />
-				<!--				<listcell label="@load(each.fkMotivo.nombre)" />              -->
-								<listcell label="@load(each.fkPersona.nombre)" />
+
+								<listcell
+									label="@load(each.fkEvento.nombre)" />
+								<listcell
+									label="@load(each.fkDirectorio.nombre)" />
+								<listcell
+									label="${m:convertirLongADate(each.fechaPlanificada)}" />
 							</listitem>
 						</template>
 						<listfoot>
